--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^0.18.0",
     "core-js": "^3.3.2",
     "express": "^4.17.1",
+    "firebase": "^7.5.0",
     "http-status-codes": "^1.4.0",
+    "randomcolor": "^0.5.4",
     "serve-static": "^1.14.1",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
